fix(pytest): elimina warning custom markers
Cambia [tool:pytest] → [pytest] in pytest.ini e definisce correttamente
i marker personalizzati per eliminare PytestUnknownMarkWarning

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,13 @@
-[tool:pytest]
-minversion = "6.0"
+[pytest]
+minversion = 6.0
 addopts = -ra -q --tb=short
-testpaths = 
-    tests
+testpaths = tests
 
 # Markers per categorizzare i test
 markers =
     real_telegram: test che inviano messaggi reali su Telegram (richiede conferma)
     unit: test unitari veloci senza dipendenze esterne
+    notion: test specifici per moduli NotionService
     integration: test di integrazione che usano più componenti
     mock_only: test che usano solo mock (nessun servizio reale)
     slow: test che richiedono più tempo per completare
