feat: update script

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ markers =
     unit: test unitari veloci senza dipendenze esterne
     notion: test specifici per moduli NotionService
     integration: test di integrazione che usano più componenti
+    e2e: test end-to-end con dati reali e servizi esterni
     mock_only: test che usano solo mock (nessun servizio reale)
     slow: test che richiedono più tempo per completare
 
