--- a/config/message_templates.yaml
+++ b/config/message_templates.yaml
@@ -4,20 +4,18 @@
 training_notification:
   telegram:
     main_group: |
-      🚀 <b>[TEST] Nuova formazione programmata!</b>
+      🎉 <b>Formazione per {area}!</b>
       
       📚 <b>Argomento:</b> {nome}
       🏢 <b>Area:</b> {area}
       📅 <b>Data e ora:</b> {data_ora}
       🔗 <b>Link Teams:</b> <a href="{link_teams}">Partecipa alla formazione</a>
       🏷 <b>Codice:</b> <code>{codice}</code>
-      
-      💡 <i>Questo è un messaggio di TEST con dati mock!</i>
-      
-      📝 Per maggiori informazioni contatta il team formazione.
+            
+      📝 Per maggiori informazioni contatta il responsabile formazioni.
     
     area_group: |
-      🎉 <b>Formazione per {area}!</b>
+      🚀 <b> Nuova formazione programmata!</b>
       
       📚 <b>Argomento:</b> {nome}
       📅 <b>Data e ora:</b> {data_ora}
@@ -54,6 +52,8 @@ feedback_request:
       📚 <b>Formazione completata:</b> {nome}
       🏢 <b>Area:</b> {area}
       🏷 <b>Codice:</b> <code>{codice}</code>
+
+      📢 Inserisci il codice della formazione nella prima domanda del form!!! 📢
       
       📝 <b><a href="{feedback_link}">👆 Clicca qui per inviare il feedback</a></b>
       
@@ -107,7 +107,7 @@ area_settings:
     emoji: "💼"
     color: "#FF8C00"
   Marketing:
-    emoji: "📢"
+    emoji: "🎨"
     color: "#E74856"
   All:
     emoji: "🌐"
